fix styles, fix bigapple page, finish main page

--- a/global_style.css
+++ b/global_style.css
@@ -12,4 +12,5 @@ body {
   justify-content: center;
 
   background-color: darkslategray;
+  font-family: 'Courier New', Courier, monospace;
 }
