--- a/pages/styles.module.css
+++ b/pages/styles.module.css
@@ -1,6 +1,6 @@
 .code_input {
   display: block;
-  margin: 2em auto;
+  margin: 15px auto;
   border: none;
   padding: 0;
   width: 6ch;
@@ -63,8 +63,8 @@
   width: 100%;
   padding: 8px 16px;
   line-height: 25px;
-  font-size: 14px;
-  font-weight: 500;
+  font-size: 20px;
+  font-weight: 400;
   font-family: inherit;
   border-radius: 6px;
   -webkit-appearance: none;
@@ -78,12 +78,12 @@
 }
 .form_field:focus {
   outline: none;
-  border-color: #275efe;
+  border-color: #158871;
 }
 .form_group {
   position: relative;
   display: flex;
-  width: 100%;
+  width: 600px;
 }
 .form_group > .span, .form_group .form_field {
   white-space: nowrap;
@@ -112,7 +112,7 @@
 .form_group > .span {
   text-align: center;
   padding: 8px 12px;
-  font-size: 14px;
+  font-size: 20px;
   line-height: 25px;
   color: #99a3ba;
   background: #eef4ff;
@@ -121,6 +121,29 @@
 }
 .form_group:focus-within > .span {
   color: #fff;
-  background: #678efe;
-  border-color: #275EFE;
+  background: #1abc9c;
+  border-color: #158871;
+}
+
+.math_container {
+  text-align: center;
+}
+
+.math_title {
+  font-size: 32px;
+  color: white;
+}
+
+.math_content {
+  margin:auto;
+  width: 50%;
+  font-size: 24px;
+  color: #bdc3c7;
+  text-align: center;
+}
+
+.code_label {
+  margin-top: 40px;
+  font-size: 18px;
+  color: #1abc9c;
 }
